
NOTE : this modified version is still under the Artistic License 2.0

- High Isle and Amenos, the add-on automatically recognizes you are in the adventure zone.
- Updated location database for High Isle Chapter. Gonfalon Bay and Amenos Station are now recognized as cities.
- Updated bundled LibEventHandler version to 1.2.99 (AddOnVersion: 1299).

Version 1.6.86 : by Calamath
- Spanish language support
- Updated API version to 101033 (ESO 7.3.x : Ascending Tide)
- Updated bundled LibEventHandler version to 1.2.98 (AddOnVersion: 1298).

Version 1.6.85 : by Calamath
[LorePlay]:Deadlands support
- Fargrave and the deadlands in the realm of Oblivion, the add-on automatically recognizes you are in the adventure zone.
- Updated location database for Deadlands DLC. Fargrave City District is now recognized as a city.
- Updated API version to 101032 (ESO 7.2.x : Deadlands)
- Updated bundled LibEventHandler version to 1.2.97 (AddOnVersion: 1297).
- Deleted backward compatibility support for Update 29

Version 1.6.84 : by Calamath
[LorePlay]:Blackwood support
- Improved location recognition engine for Senchal type cities where no city subzones are defined.
- In the wilderness of Blackwood, the add-on automatically recognizes you are in the adventure zone.
- Updated location database for Blackwood Chapter. Leyawiin and Gideon are now recognized as cities.
- Adjusted location database of Understone Keep in Markarth.
- Updated API version to 100035 (ESO 7.0.x : Blackwood)
- Updated bundled LibEventHandler version to 1.2.95 (AddOnVersion: 1295).
- Backward compatibility support for Update 29
[LoreWear]
- Addressed API changes regarding GameplayActorCategory.
[IdleEmotes]
- Adjusted the Camera Spin Disabler feature to enable the preview button in the endeavor seal store introduced in Update 30.

Version 1.6.83 : by Calamath
[HotFix]